mobile nav visibility fix

--- a/src/styles/RouteHeader.css
+++ b/src/styles/RouteHeader.css
@@ -1,7 +1,3 @@
-.mobile-nav {
-  display: none;
-}
-
 #route-logo {
   display: flex;
   max-width: 15vh;
